--- a/package.json
+++ b/package.json
@@ -11,17 +11,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
+    "@angular/animations": "^6.0.9",
+    "@angular/cdk": "^6.2.1",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
-    "@angular/platform-browser": "^6.0.3",
+    "@angular/material": "^6.2.1",
+    "@angular/platform-browser": "^6.0.9",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "angular-6-datatable": "^0.8.0",
+    "angular-bootstrap-md": "^6.2.1",
+    "angular5-csv": "^0.2.10",
+    "angularfire2": "^5.0.0-rc.10",
+    "chart.js": "^2.5.0",
     "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
+    "firebase": "^5.0.4",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "ng2-search-filter": "^0.4.7",
+    "ngx-bootstrap": "^3.0.1",
+    "ngx-editor": "^3.3.0",
+    "ngx-pagination": "^3.2.0",
+    "ngx-quill": "^3.3.0",
+    "ngx-toastr": "^8.8.0",
+    "rxjs": "^6.2.1",
+    "rxjs-compat": "^6.2.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
